[package]
name = "bliss-analyse"
version = "0.1.0"
authors = ["Craig Drummond <craig.p.drummond@gmail.com>"]
edition = "2018"
license = "GPL-3.0-only"
description = "Analyse audio file with bliss-rs"
repository = "https://github.com/CDrummond/bliss-analyse"
keywords = ["audio", "song", "similarity"]
readme = "README.md"

[dependencies]
bliss-audio = "0.4.4"
ffmpeg-next = "4.4.0"

