[package]
name = "bliss-analyze"
version = "0.1.0"
authors = ["Craig Drummond <craig.p.drummond@gmail.com>", "Ronald Record <ronaldrecord@gmail.com>"]
edition = "2022"
license = "GPL-3.0-only"
description = "Analyze audio file with bliss-rs"
repository = "https://github.com/doctorfree/bliss-analyze"
keywords = ["audio", "song", "similarity"]
readme = "README.md"

[dependencies]
bliss-audio = "0.4.4"
ffmpeg-next = "4.4.0"

